syntax = "proto3";

package proto;

option go_package = "github.com/limechain/hedera-eth-bridge-validator/proto";

message TopicSignatureMessage {
  string hash = 1;
  string signature = 2;
}